<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <ImageView
        android:id="@+id/iv_recap_pict"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_add_water"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/desc_image" />

    <TextView
        android:id="@+id/tv_recap_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/time"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/iv_recap_pict"
        app:layout_constraintTop_toTopOf="@id/iv_recap_pict"
        app:layout_constraintBottom_toBottomOf="@id/iv_recap_pict"/>

    <TextView
        android:id="@+id/tv_recap_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/size"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/tv_recap_time"
        app:layout_constraintTop_toTopOf="@id/iv_recap_pict"
        app:layout_constraintBottom_toBottomOf="@id/iv_recap_pict"/>

</androidx.constraintlayout.widget.ConstraintLayout>