<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">

        <TextView
            android:id="@+id/tv_title1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/personal_information"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/righteous_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="30dp"
            android:outlineSpotShadowColor="@android:color/darker_gray"
            app:strokeWidth="2dp"
            app:strokeColor="@android:color/darker_gray"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="20dp">

                <ImageButton
                    android:id="@+id/btn_gender"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_gender"
                    android:scaleType="fitXY"
                    android:background="?android:attr/windowBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_username"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/desc_set_gender_button" />

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/gender"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    app:layout_constraintStart_toStartOf="@id/btn_gender"
                    app:layout_constraintEnd_toEndOf="@id/btn_gender"
                    app:layout_constraintTop_toBottomOf="@id/btn_gender"/>

                <ImageButton
                    android:id="@+id/btn_username"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_user"
                    android:scaleType="fitXY"
                    android:background="?android:attr/windowBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/desc_set_weight_button" />

                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/username"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    app:layout_constraintStart_toStartOf="@id/btn_username"
                    app:layout_constraintEnd_toEndOf="@id/btn_username"
                    app:layout_constraintTop_toBottomOf="@id/btn_username"/>

                <ImageButton
                    android:id="@+id/btn_goals"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_goal"
                    android:scaleType="fitXY"
                    android:background="?android:attr/windowBackground"
                    app:layout_constraintStart_toEndOf="@id/btn_username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/desc_goals_button" />

                <TextView
                    android:id="@+id/tv_intake_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/intake_goals"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    app:layout_constraintStart_toStartOf="@id/btn_goals"
                    app:layout_constraintEnd_toEndOf="@id/btn_goals"
                    app:layout_constraintTop_toBottomOf="@id/btn_goals"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_title2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/reminder"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/righteous_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container1"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="30dp"
            android:outlineSpotShadowColor="@android:color/darker_gray"
            app:strokeWidth="2dp"
            app:strokeColor="@android:color/darker_gray"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="20dp">

                <ImageButton
                    android:id="@+id/btn_reminder_schedule"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_alarm"
                    android:scaleType="fitXY"
                    android:background="?android:attr/windowBackground"
                    app:layout_constraintStart_toStartOf="@id/tv_reminder_schedule"
                    app:layout_constraintEnd_toEndOf="@id/tv_reminder_schedule"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/desc_reminder_button" />

                <TextView
                    android:id="@+id/tv_reminder_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/reminder_schedule"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_reminder_sound"
                    app:layout_constraintTop_toBottomOf="@id/btn_reminder_schedule"/>

                <ImageButton
                    android:id="@+id/btn_reminder_sound"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_bell"
                    android:scaleType="fitXY"
                    android:background="?android:attr/windowBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/desc_reminder_sound_button" />

                <TextView
                    android:id="@+id/tv_reminder_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/reminder_sound"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    app:layout_constraintStart_toStartOf="@id/btn_reminder_sound"
                    app:layout_constraintEnd_toEndOf="@id/btn_reminder_sound"
                    app:layout_constraintTop_toBottomOf="@id/btn_reminder_sound"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_title3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/others"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/righteous_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container2"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="30dp"
            android:outlineSpotShadowColor="@android:color/darker_gray"
            app:strokeWidth="2dp"
            app:strokeColor="@android:color/darker_gray"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="20dp">

                <ImageButton
                    android:id="@+id/btn_language"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_language"
                    android:scaleType="fitXY"
                    android:background="?android:attr/windowBackground"
                    app:layout_constraintStart_toStartOf="@id/tv_language"
                    app:layout_constraintEnd_toEndOf="@id/tv_language"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/desc_change_language_button" />

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/change_language"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_reset"
                    app:layout_constraintTop_toBottomOf="@id/btn_language"/>

                <ImageButton
                    android:id="@+id/btn_reset"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_reset"
                    android:scaleType="fitXY"
                    android:background="?android:attr/windowBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/desc_reset_button" />

                <TextView
                    android:id="@+id/tv_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/reset"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    app:layout_constraintStart_toStartOf="@id/btn_reset"
                    app:layout_constraintEnd_toEndOf="@id/btn_reset"
                    app:layout_constraintTop_toBottomOf="@id/btn_reset"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>