<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="50dp"
    app:cardElevation="8dp"
    tools:context=".ui.SetGoalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/tv_setGoal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="18dp"
            android:text="@string/setGoal"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/et_setGoal"
            app:layout_constraintEnd_toEndOf="@id/btn_setGoal"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/et_setGoal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/_100_ml"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_setGoal"/>

        <Button
            android:theme="@style/Button"
            android:id="@+id/btn_setGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/add"
            app:layout_constraintStart_toEndOf="@id/et_setGoal"
            app:layout_constraintTop_toTopOf="@id/et_setGoal"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>